--- a/src/app/progress/progress.component.scss
+++ b/src/app/progress/progress.component.scss
@@ -2,10 +2,10 @@
 
 .progress-pane {
     position: fixed;
-    bottom: 0;
+    bottom: 15px;
     left: 2.5vw;
     width: 95vw;
-    height: 200px;
+    height: 150px;
 
     display: flex;
     align-items: center;
