--- a/src/app/restart/restart.component.scss
+++ b/src/app/restart/restart.component.scss
@@ -5,7 +5,6 @@
     top: 6rem;
     right: 2.5vw;
 
-    opacity: .4;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -14,6 +13,7 @@
     align-items: center;
     transition: all 200ms ease;
     box-shadow: 5px 5px 20px rgba(0,0,0,.5);
+    background-color: white;
     cursor: pointer;
 
     img {
