--- a/src/app/titlebar/titlebar.component.scss
+++ b/src/app/titlebar/titlebar.component.scss
@@ -3,7 +3,7 @@
 .titlebar {
     padding: .5rem 1.5rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     border-radius: .5rem;
     position: fixed;
@@ -11,6 +11,7 @@
     left: 2.5vw;
     top: 1.5rem;
     box-sizing: border-box;
+    background-color: white;
 
     box-shadow: 5px 5px 20px rgba(0,0,0,.25);
 
@@ -19,6 +20,7 @@
         font-size: 2rem;
         font-weight: 500;
         color: rgba(0,0,0,.6);
+        text-align: center;
 
         strong {
             color: rgba(0,0,0,1);
@@ -29,9 +31,19 @@
         font-family: futura, sans-serif;
         opacity: .5;
         width: 30%;
+        display: none;
 
         &:last-of-type {
             text-align: right;
+        }
+    }
+}
+
+@media (min-width: 700px) {
+    .titlebar {
+        justify-content: space-between;
+        .subheader {
+            display: inline;
         }
     }
 }
